[project]
name = "comfyui_reimgsize"
description = "a simple reimgsize node(s) in comfyui."
version = "1.0.3"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/MakkiShizu/comfyui_reimgsize"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "makki-shizu"
DisplayName = "comfyui_reimgsize"
Icon = ""
