[project]
name = "comfyui_reimgsize"
description = "a simple resize image node(s) in comfyui. This repository is not specific to the length and width values of an image, but focuses more on adjusting the total pixel count, side length specifications, and size ratios of the image."
version = "1.0.9"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/MakkiShizu/comfyui_reimgsize"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "makki-shizu"
DisplayName = "comfyui_reimgsize"
Icon = ""
